# sentex

./: .gitignore  README.md  pyproject.toml
examples/: immune_system_pipeline.py
sentex/: __init__.py  context.py  embedder.py  eval.py  fs.py  graph.py  knn.py  llm.py  manifest.py  persistence.py  pipeline.py  relations.py  retrieval.py  scoring.py  server.py  session.py  splitter.py  store.py  telemetry.py  tokens.py  types.py
sentex/core/: __init__.py  fs.py  graph.py  relations.py  scoring.py  tokens.py  types.py
sentex/ingestion/: __init__.py  embedder.py  knn.py
sentex/pipeline/: __init__.py  context.py  manifest.py  pipeline.py  session.py
sentex/retrieval/: __init__.py  engine.py  eval.py
sentex/server/: __init__.py  app.py
sentex/storage/: __init__.py  persistence.py  store.py
sentex/telemetry/: __init__.py  collector.py
tests/: test_byoa.py  test_graph.py  test_knn.py  test_persistence.py  test_pipeline.py  test_relations_and_fs.py  test_retrieval_levels.py  test_scoring.py  test_splitter.py  test_store_and_session.py  test_telemetry_and_eval.py
