[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentex"
version = "0.2.3"
description = "Sentence-graph context management for multi-agent AI pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "context", "llm", "multi-agent", "memory", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "litellm>=1.40",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "tiktoken>=0.7",
    "nltk>=3.8",
]

[project.urls]
Homepage = "https://github.com/laxmanclo/sentex"
Repository = "https://github.com/laxmanclo/sentex"
Issues = "https://github.com/laxmanclo/sentex/issues"

[project.optional-dependencies]
prometheus = ["prometheus-client>=0.20"]
eval       = ["scikit-learn>=1.4"]
watch      = ["httpx>=0.27"]
full       = [
    "prometheus-client>=0.20",
    "scikit-learn>=1.4",
    "httpx>=0.27",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sentex*"]
